fix: исправить ошибки после ревью

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Document</title>
+    <title>Проект Место</title>
 </head>
 <body>
     <div class="page">
 
-        <form class="popup">
+        <div class="popup">
             <div class="popup__main-container">
                 <button class ="button popup__close-button" type="button"></button>
                 <h2 class="popup__heading">Редактировать профиль</h2>
-                <fieldset class="popup__container">
-                    <input type="text" class="popup__item popup__item_el_name" placeholder="Имя" value="Жак-Ив Кусто">
-                    <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" value="Исследователь океана">
-                </fieldset> 
-                <div class="popup__button-container">
-                    <button class="button popup__submit-button">Сохранить</button>
-                </div>
+                <form class="popup__form" name="popupForm">
+                    <fieldset class="popup__container">
+                        <input type="text" class="popup__item popup__item_el_name" placeholder="Имя" name="nameInput">
+                        <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" name="jobInput">
+                    </fieldset> 
+                    <button class="button popup__submit-button" type="submit">Сохранить</button>
+                </form class="popup__form">
             </div>
-        </form>
+        </div>
 
         <header class="header">
             <div class="header__logo"></div>
@@ -33,18 +33,20 @@
                     <img class="avatar" src="./images/avatar/avatar.png" alt="Аватар пользователя">
                     <div class="profile-info">
                         <h1 class="profile-info__name">Жак-Ив Кусто</h1>
-                        <button class="button profile-info__edit-button"></button>
+                        <button class="button profile-info__edit-button" type="button"></button>
                         <p class="profile-info__status">Исследователь океана</p>
                     </div>
                 </div>
-                <button class="button add-button"></button>
+                <button class="button add-button" type="button">
+                    <div class="add-button__image"></div>
+                </button>
             </div>
             <ul class="elements">
                     <li class="element">
                         <img class="element__image" src="./images/element/Италия.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Италия</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
 
@@ -52,7 +54,7 @@
                         <img class="element__image" src="./images/element/Иордания.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Иордания</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
 
@@ -60,7 +62,7 @@
                         <img class="element__image" src="./images/element/Непал.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Непал</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
 
@@ -68,7 +70,7 @@
                         <img class="element__image" src="./images/element/Перу.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Перу</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
 
@@ -76,7 +78,7 @@
                         <img class="element__image" src="./images/element/Турция.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Турция</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
 
@@ -84,15 +86,17 @@
                         <img class="element__image" src="./images/element/США.jpg" alt="Фотография">
                         <div class="element__container">
                             <p class="element__text">Соединенные Штаты Америки</p>
-                            <button class="button element__like"></button>
+                            <button class="button element__like" type="button"></button>
                         </div>
                     </li>
             </ul>
-            <footer class="footer">
-                <p class="footer__author">&copy; 2020 Mesto Russia</p>
-            </footer>
         </main>
+
+        <footer class="footer">
+            <p class="footer__author">&copy; 2020 Mesto Russia</p>
+        </footer>
+        
     </div>
-    <script src="./index.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
