fix: исправить ошибки после валидатора

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" name="jobInput">
                     </fieldset> 
                     <button class="button popup__submit-button" type="submit">Сохранить</button>
-                </form class="popup__form">
+                </form>
             </div>
         </div>
 
@@ -37,9 +37,7 @@
                         <p class="profile-info__status">Исследователь океана</p>
                     </div>
                 </div>
-                <button class="button add-button" type="button">
-                    <div class="add-button__image"></div>
-                </button>
+                <button class="button add-button" type="button"></button>
             </div>
             <ul class="elements">
                     <li class="element">
