feat: реализовать возможность добавления карточек пользователем и возможность ставить like

--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
       </div>
     </div>
 
+    <div class="popup popup_type_new-picture">
+      <div class="popup__main-container">
+        <button class ="button popup__close-button popup__close-button_type_new-picture" type="button"></button>
+        <h2 class="popup__heading">Новое место</h2>
+        <form class="popup__form popup__form_type_new-picture" name="popupForm">
+          <fieldset class="popup__container">
+            <input type="text" class="popup__item popup__item_el_place" placeholder="Название" name="placeInput">
+            <input type="text" class="popup__item popup__item_el_src" placeholder="Ссылка на картинку" name="srcInput">
+          </fieldset> 
+          <button class="button popup__submit-button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
     <header class="header">
       <div class="header__logo"></div>
     </header>
@@ -109,5 +123,3 @@
   <script src="./scripts/index.js"></script>
 </body>
 </html>
-<!-- 111 -->
-<!-- 123 -->
