--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="popup">
       <div class="popup__main-container">
-        <button class ="button popup__close-button" type="button"></button>
+        <button class ="button close-button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <form class="popup__form" name="popupForm">
           <fieldset class="popup__container">
@@ -25,7 +25,7 @@
 
     <div class="popup popup_type_new-picture">
       <div class="popup__main-container">
-        <button class ="button popup__close-button popup__close-button_type_new-picture" type="button"></button>
+        <button class ="button close-button close-button_type_new-picture" type="button"></button>
         <h2 class="popup__heading">Новое место</h2>
         <form class="popup__form popup__form_type_new-picture" name="popupForm">
           <fieldset class="popup__container">
@@ -53,65 +53,26 @@
         </div>
         <button class="button add-button" type="button"></button>
       </div>
-      <ul class="elements">
 
-       <template class="template-element">
+      <ul class="elements">
+      <template class="template-element">
         <li class="element">
-         <img class="element__image" alt="Фотография">
-         <div class="element__container">
-          <p class="element__text"></p>
-          <button class="button element__like" type="button"></button>
-         </div>
+          <button class="element__trash" type="button"></button>
+          <img class="element__image" alt="Фотография">
+          <div class="element__container">
+            <p class="element__text"></p>
+            <button class="button element__like" type="button"></button>
+          </div>
+          <div class="element__in-popup">
+            <div class="element__popup-container">
+              <button class ="button close-button close-button_type_image-popup" type="button"></button>
+              <img class="element__image element__image_in-popup" alt="Фотография">
+              <p class="element__text element__text_in-popup"></p>
+            </div>
+          </div>
         </li>    
        </template>
 
-          <li class="element">
-            <img class="element__image" src="./images/element/Италия.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Италия</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img class="element__image" src="./images/element/Иордания.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Иордания</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img class="element__image" src="./images/element/Непал.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Непал</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img class="element__image" src="./images/element/Перу.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Перу</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img class="element__image" src="./images/element/Турция.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Турция</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img class="element__image" src="./images/element/США.jpg" alt="Фотография">
-            <div class="element__container">
-              <p class="element__text">Соединенные Штаты Америки</p>
-              <button class="button element__like" type="button"></button>
-            </div>
-          </li>
       </ul>
     </main>
 
