--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
 
-    <div class="popup">
+    <div class="popup profile-popup">
       <div class="popup__main-container">
         <button class ="button close-button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
