--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="popup profile-popup">
       <div class="popup__main-container">
-        <button class ="button close-button" type="button"></button>
+        <button class ="button close-button profile-close-button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <form class="popup__form" name="popupForm">
           <fieldset class="popup__container">
