--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="popup__main-container">
         <button class ="button close-button profile-close-button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
-        <form class="popup__form" name="popupForm">
+        <form class="popup__form popup__form_type_profile" name="popupForm">
           <fieldset class="popup__container">
             <input type="text" class="popup__item popup__item_el_name" placeholder="Имя" name="nameInput">
             <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" name="jobInput">
@@ -23,11 +23,11 @@
       </div>
     </div>
 
-    <div class="popup popup_type_new-picture">
+    <div class="popup card-popup">
       <div class="popup__main-container">
-        <button class ="button close-button close-button_type_new-picture" type="button"></button>
+        <button class ="button close-button card-close-button" type="button"></button>
         <h2 class="popup__heading">Новое место</h2>
-        <form class="popup__form popup__form_type_new-picture" name="popupForm">
+        <form class="popup__form popup__form_type_new-card" name="popupForm">
           <fieldset class="popup__container">
             <input type="text" class="popup__item popup__item_el_place" placeholder="Название" name="placeInput">
             <input type="text" class="popup__item popup__item_el_src" placeholder="Ссылка на картинку" name="srcInput">
