--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="popup__main-container">
         <button class ="button close-button profile-close-button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
-        <form class="popup__form popup__form_type_profile" name="popupForm">
+        <form class="popup__form popup__form_type_profile" name="profileForm">
           <fieldset class="popup__container">
             <input type="text" class="popup__item popup__item_el_name" placeholder="Имя" name="nameInput">
             <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" name="jobInput">
@@ -27,7 +27,7 @@
       <div class="popup__main-container">
         <button class ="button close-button card-close-button" type="button"></button>
         <h2 class="popup__heading">Новое место</h2>
-        <form class="popup__form popup__form_type_new-card" name="popupForm">
+        <form class="popup__form popup__form_type_new-card" name="cardForm">
           <fieldset class="popup__container">
             <input type="text" class="popup__item popup__item_el_place" placeholder="Название" name="placeInput">
             <input type="text" class="popup__item popup__item_el_src" placeholder="Ссылка на картинку" name="srcInput">
@@ -36,6 +36,22 @@
         </form>
       </div>
     </div>
+
+    <div class="popup image-popup">
+      <div class="image-popup__container">
+        <button class ="button close-button close-button_type_image-popup" type="button"></button>
+        <img class="card-image card-image_popup" alt="Фотография">
+        <p class="card-text card-text_popup"></p>
+      </div>
+    </div>
+
+    <!-- <div class="element__in-popup">
+      <div class="element__popup-container">
+        <button class ="button close-button close-button_type_image-popup" type="button"></button>
+        <img class="element__image element__image_in-popup" alt="Фотография">
+        <p class="element__text element__text_in-popup"></p>
+      </div>
+    </div> -->
 
     <header class="header">
       <div class="header__logo"></div>
@@ -58,17 +74,10 @@
       <template class="template-element">
         <li class="element">
           <button class="element__trash" type="button"></button>
-          <img class="element__image" alt="Фотография">
+          <img class="card-image" alt="Фотография">
           <div class="element__container">
-            <p class="element__text"></p>
+            <p class="card-text"></p>
             <button class="button element__like" type="button"></button>
-          </div>
-          <div class="element__in-popup">
-            <div class="element__popup-container">
-              <button class ="button close-button close-button_type_image-popup" type="button"></button>
-              <img class="element__image element__image_in-popup" alt="Фотография">
-              <p class="element__text element__text_in-popup"></p>
-            </div>
           </div>
         </li>    
        </template>
