--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Проект Место</title>
 </head>
-<body>
+<body class="body">
   <div class="page">
 
     <div class="popup profile-popup">
