--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <h2 class="popup__heading">Редактировать профиль</h2>
         <form class="popup__form popup__form_type_profile" name="profileForm" novalidate>
           <fieldset class="popup__container">
-            <input type="text" class="popup__item popup__item_el_name" placeholder="Имя" name="nameInput" required minlength="2" maxlength="40">
-            <input type="text" class="popup__item popup__item_el_status" placeholder="О себе" name="jobInput" required minlength="2" maxlength="200">
+            <input type="text" class="popup__item popup__item_el_name" id="name-input" placeholder="Имя" name="nameInput" required minlength="2" maxlength="40">
+            <span class="popup__input-error" id="name-input-error"></span>
+            <input type="text" class="popup__item popup__item_el_status" id="job-input" placeholder="О себе" name="jobInput" required minlength="2" maxlength="200">
+            <span class="popup__input-error" id="job-input-error"></span>
           </fieldset> 
-          <button class="button popup__submit-button" type="submit">Сохранить</button>
+          <button class="button popup__submit-button" type="submit" disabled>Сохранить</button>
         </form>
       </div>
     </div>
@@ -29,10 +31,12 @@
         <h2 class="popup__heading">Новое место</h2>
         <form class="popup__form popup__form_type_new-card" name="cardForm" novalidate>
           <fieldset class="popup__container">
-            <input type="text" class="popup__item popup__item_el_place" placeholder="Название" name="placeInput" required minlength="2" maxlength="30">
-            <input type="url" class="popup__item popup__item_el_src" placeholder="Ссылка на картинку" name="srcInput" required>
+            <input type="text" class="popup__item popup__item_el_place" id="place-input" placeholder="Название" name="placeInput" required minlength="2" maxlength="30">
+            <span class="popup__input-error" id="place-input-error"></span>
+            <input type="url" class="popup__item popup__item_el_src" id="src-input" placeholder="Ссылка на картинку" name="srcInput" required>
+            <span class="popup__input-error" id="src-input-error"></span>
           </fieldset> 
-          <button class="button popup__submit-button" type="submit">Сохранить</button>
+          <button class="button popup__submit-button popup__submit-button_disabled" type="submit" disabled>Сохранить</button>
         </form>
       </div>
     </div>
@@ -83,5 +87,6 @@
     
   </div>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validation.js"></script>
 </body>
 </html>
