--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </footer>
     
   </div>
+  <script src="./scripts/constants.js"></script> 
   <script src="./scripts/index.js"></script>
   <script src="./scripts/validation.js"></script>
 </body>
