refactoring: обернуть код в классы

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
     </footer>
     
   </div>
-  <script src="./scripts/constants.js"></script> 
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validation.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/constants.js"></script> 
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/openAndClosePopup.js"></script>
 </body>
 </html>
